tests/snapshots/parse_failure__object_double_open_curly.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{{
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found `{`
 --> stdin:1:2
  |
1 | {{
  | -^
  | |
  | expected due to `{`
